test/errors/scope-resolution/useImportUnknownSym.compopts
--detailed-errors # useImportUnknownSym-detailed.good
--no-detailed-errors # useImportUnknownSym-brief.good
